; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-rpc-client.c_rpcc_connected_nohs.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-rpc-client.c_rpcc_connected_nohs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32, i32 }
%struct.TYPE_2__ = type { i32 (%struct.connection*)* }

@precise_now = common dso_local global i32 0, align 4
@conn_wait_answer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rpcc_connected_nohs(%struct.connection* %0) #0 {
  %2 = alloca %struct.connection*, align 8
  store %struct.connection* %0, %struct.connection** %2, align 8
  %3 = load i32, i32* @precise_now, align 4
  %4 = load %struct.connection*, %struct.connection** %2, align 8
  %5 = getelementptr inbounds %struct.connection, %struct.connection* %4, i32 0, i32 1
  store i32 %3, i32* %5, align 4
  %6 = load i32, i32* @conn_wait_answer, align 4
  %7 = load %struct.connection*, %struct.connection** %2, align 8
  %8 = getelementptr inbounds %struct.connection, %struct.connection* %7, i32 0, i32 0
  store i32 %6, i32* %8, align 4
  %9 = load %struct.connection*, %struct.connection** %2, align 8
  %10 = call %struct.TYPE_2__* @RPCC_FUNC(%struct.connection* %9)
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (%struct.connection*)*, i32 (%struct.connection*)** %11, align 8
  %13 = icmp ne i32 (%struct.connection*)* %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %1
  %15 = load %struct.connection*, %struct.connection** %2, align 8
  %16 = call %struct.TYPE_2__* @RPCC_FUNC(%struct.connection* %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (%struct.connection*)*, i32 (%struct.connection*)** %17, align 8
  %19 = load %struct.connection*, %struct.connection** %2, align 8
  %20 = call i32 %18(%struct.connection* %19)
  br label %21

21:                                               ; preds = %14, %1
  ret i32 0
}

declare dso_local %struct.TYPE_2__* @RPCC_FUNC(%struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
